--- a/flink_study/pom.xml
+++ b/flink_study/pom.xml
@@ -11,10 +11,23 @@
     </properties>
 
     <repositories>
+        <!-- 		指定该项目可以从哪些地方下载依赖包  -->
         <repository>
             <id>scala-tools.org</id>
             <name>Scala-Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
+        </repository>
+        <repository>
+            <id>aliyun</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+        </repository>
+        <repository>
+            <id>jboss</id>
+            <url>http://repository.jboss.org/nexus/content/groups/public</url>
         </repository>
     </repositories>
 
@@ -32,6 +45,7 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+        <!--Flink-->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-scala_2.11</artifactId>
@@ -63,32 +77,37 @@
             <version>${flink.version}</version>
         </dependency>
 
+
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-kafka-0.11_2.11</artifactId>
-            <version>1.6.1</version>
+            <artifactId>flink-connector-elasticsearch6_2.11</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.6</version>
-        </dependency>
-
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.flink</groupId>-->
-            <!--<artifactId>flink-connector-kafka_2.11</artifactId>-->
-            <!--<version>1.11.0</version>-->
-        <!--</dependency>-->
 
         <!--<dependency>-->
         <!--<groupId>org.apache.flink</groupId>-->
-        <!--<artifactId>flink-connector-kafka-0.8_2.11</artifactId>-->
-        <!--<version>${flink.version}</version>-->
-        <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+        <!--<artifactId>flink-connector-kafka_2.11</artifactId>-->
+        <!--<version>1.11.0</version>-->
         <!--</dependency>-->
+
+<!--Kafka-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.flink</groupId>-->
+            <!--<artifactId>flink-connector-kafka-0.11_2.11</artifactId>-->
+            <!--<version>1.6.1</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka_2.11</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-connector-kafka-0.8_2.11</artifactId>
+        <version>${flink.version}</version>
+        <!--<scope>provided</scope>-->
+        </dependency>
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -113,10 +132,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-elasticsearch6_2.11</artifactId>
-            <version>${flink.version}</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
         </dependency>
     </dependencies>
 
