--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ flink_study/rangePartition/
 flink_kafka/.idea/
 flink_kafka/target/
 anchor_dy_live_schedule/.idea/
+FlinkDemo/user/
+FlinkDemo/target/
+FlinkDemo/.idea/
