--- a/FlinkDemo/pom.xml
+++ b/FlinkDemo/pom.xml
@@ -6,7 +6,7 @@
   <inceptionYear>2008</inceptionYear>
   <properties>
     <scala.version>2.11.6</scala.version>
-    <flink.version>1.10.0</flink.version>
+    <flink.version>1.11.0</flink.version>
   </properties>
   <repositories>
     <!--指定该项目可以从哪些地方下载依赖包  -->
@@ -46,6 +46,11 @@
     <!--Flink-->
     <dependency>
       <groupId>org.apache.flink</groupId>
+      <artifactId>flink-clients_2.11</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
       <artifactId>flink-scala_2.11</artifactId>
       <version>${flink.version}</version>
       <!--<scope>provided</scope>-->
@@ -81,6 +86,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
+      <artifactId>flink-table-planner-blink_2.11</artifactId>
+      <version>${flink.version}</version>
+      <!--<scope>provided</scope>-->
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
       <artifactId>flink-table-common</artifactId>
       <version>${flink.version}</version>
       <!--<scope>provided</scope>-->
@@ -98,11 +109,11 @@
     </dependency>
 
 
-    <dependency>
-      <groupId>org.apache.avro</groupId>
-      <artifactId>avro</artifactId>
-      <version>${flink.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.avro</groupId>-->
+      <!--<artifactId>avro</artifactId>-->
+      <!--<version>${flink.version}</version>-->
+    <!--</dependency>-->
     <!--<dependency>-->
       <!--<groupId>org.apache.flink</groupId>-->
       <!--<artifactId>flink-avro</artifactId>-->
