--- a/FlinkDemo/pom.xml
+++ b/FlinkDemo/pom.xml
@@ -84,12 +84,12 @@
       <version>${flink.version}</version>
       <!--<scope>provided</scope>-->
     </dependency>
-    <dependency>
-      <groupId>org.apache.flink</groupId>
-      <artifactId>flink-table-planner-blink_2.11</artifactId>
-      <version>${flink.version}</version>
-      <!--<scope>provided</scope>-->
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.flink</groupId>-->
+      <!--<artifactId>flink-table-planner-blink_2.11</artifactId>-->
+      <!--<version>${flink.version}</version>-->
+      <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-table-common</artifactId>
