update flink kafka 2 mysql excatly once 精确一次语义实现

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ anchor_dy_live_schedule/.idea/
 FlinkDemo/user/
 FlinkDemo/target/
 FlinkDemo/.idea/
+flink_study/src/main/scala/com/xiaohulu/excatly_once/checkpoint/
