--- a/flink_study/pom.xml
+++ b/flink_study/pom.xml
@@ -162,6 +162,12 @@
             <artifactId>scalaj-http_2.11</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
     </dependencies>
 
 
